Update founder image and message in index.html
Replaced placeholder image with a dynamic avatar for the founder section and updated the founder's message.

--- a/index.html
+++ b/index.html
@@ -1,72 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Ethiopia 2026</title>
-    <style>
-        * { scroll-behavior: smooth; box-sizing: border-box; }
-        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; color: #333; line-height: 1.6; }
-        nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        .logo { font-weight: bold; font-size: 1.5rem; color: #003973; text-decoration: none; }
-        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
-        .btn-join { background: #2E7D32; color: white !important; padding: 8px 20px; border-radius: 5px; font-weight: bold; }
-        
-        .hero { padding: 100px 5%; background: white; text-align: left; border-bottom: 5px solid #FFD700; }
-        .hero h1 { font-size: 4.5rem; color: #003973; margin: 0; }
-        .btn-start { background: #2E7D32; color: white; padding: 15px 35px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; margin-top: 25px; font-size: 1.3rem; }
-
-        /* FOUNDER SECTION */
-        .founder-section { padding: 80px 5%; background: #fff; display: flex; align-items: center; gap: 50px; flex-wrap: wrap; }
-        .founder-img { width: 300px; height: 300px; background: #ddd; border-radius: 20px; display: flex; align-items: center; justify-content: center; font-weight: bold; color: #777; border: 4px solid #003973; }
-        .founder-text { flex: 1; min-width: 300px; }
-
-        .signup-section { padding: 100px 5%; background: #003973; color: white; text-align: center; }
-        .form-container { max-width: 500px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
-        .signup-input { padding: 15px; width: 100%; border-radius: 5px; border: none; margin-bottom: 15px; font-size: 1rem; }
-        .signup-btn { width: 100%; padding: 15px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.1rem; }
-
-        footer { padding: 40px; background: #222; color: #fff; text-align: center; }
-    </style>
-</head>
-<body>
-
-<nav>
-    <a href="#" class="logo">ልማት Hub</a>
-    <div class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#founder">Founder</a>
-        <a href="#signup" class="btn-join">Join Now</a>
-    </div>
-</nav>
-
-<section class="hero" id="home">
-    <h1>ልማት Hub</h1>
-    <p style="font-size: 1.6rem; color: #555; max-width: 700px;">Empowering Ethiopia's Students for a Global Future. Mastering AI, Python, and remote work for 2026.</p>
-    <a href="#signup" class="btn-start">Start Learning Now</a>
-</section>
-
 <section class="founder-section" id="founder">
-    <div class="founder-img">Your Photo Here</div>
+    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Felix" alt="Founder" class="founder-img" style="width: 300px; height: 300px; border-radius: 20px; border: 4px solid #003973; object-fit: cover;">
     <div class="founder-text">
         <h2 style="color: #003973; font-size: 2.5rem;">A Message from the Founder</h2>
-        <p style="font-size: 1.2rem; font-style: italic;">"Our goal is to ensure that no Ethiopian student is left behind in the AI revolution. We are building the bridge between local talent and global opportunities."</p>
+        <p style="font-size: 1.2rem; font-style: italic;">"Our goal is to ensure that no Ethiopian student is left behind in the AI revolution."</p>
         <p>Launched in 2026, ልማት Hub is committed to training the next 1 million Ethiopian developers.</p>
-    <img src="https://via.placeholder.com/300" alt="Founder" class="founder-img">
-</section>
-
-<section class="signup-section" id="signup">
-    <div class="form-container">
-        <h2>Join the Digital Revolution</h2>
-        <input type="text" placeholder="Full Name" class="signup-input">
-        <input type="email" placeholder="Email Address" class="signup-input">
-        <button class="signup-btn" onclick="alert('Welcome to the team!')">Submit Application</button>
     </div>
 </section>
-
-<footer>
-    <p>&copy; 2026 Lemat Hub. Building Ethiopia's Digital Future Together.</p>
-</footer>
-
-</body>
-</html>
