--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<section class="founder-section" id="founder">
-    <img src="https://api.dicebear.com/7.x/avataaars/svg?seed=Felix" alt="Founder" class="founder-img" style="width: 300px; height: 300px; border-radius: 20px; border: 4px solid #003973; object-fit: cover;">
-    <div class="founder-text">
-        <h2 style="color: #003973; font-size: 2.5rem;">A Message from the Founder</h2>
-        <p style="font-size: 1.2rem; font-style: italic;">"Our goal is to ensure that no Ethiopian student is left behind in the AI revolution."</p>
-        <p>Launched in 2026, ልማት Hub is committed to training the next 1 million Ethiopian developers.</p>
-    </div>
-</section>
+<img src="https://img.icons8.com/ios-filled/150/003973/user-male-circle.png" alt="Founder" class="founder-img" style="width: 250px; height: 250px; border-radius: 50%; border: 4px solid #003973; background: #fff; padding: 10px;">
