Insert founder section with image and message
Added a section with a message from the founder.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<img src="https://img.icons8.com/ios-filled/150/003973/user-male-circle.png" alt="Founder" class="founder-img" style="width: 250px; height: 250px; border-radius: 50%; border: 4px solid #003973; background: #fff; padding: 10px;">
+<section id="founder" style="padding: 40px 5%; display: flex; align-items: center; gap: 30px; background: #fff;">
+    <img src="https://img.icons8.com/ios-filled/150/003973/user-male-circle.png" alt="Founder" style="width: 150px; height: 150px; border-radius: 50%; border: 3px solid #003973;">
+    <div>
+        <h2 style="color: #003973; margin: 0;">A Message from the Founder</h2>
+        <p>Building the bridge for 1 million Ethiopian developers.</p>
+    </div>
+</section>
