Add navigation links for Founder and FAQ sections

--- a/index.html
+++ b/index.html
@@ -1,49 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Ethiopia 2026</title>
-    <style>
-        * { scroll-behavior: smooth; box-sizing: border-box; }
-        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; color: #333; }
-        nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        .logo { font-weight: bold; font-size: 1.5rem; color: #003973; text-decoration: none; }
-        .btn-join { background: #2E7D32; color: white !important; padding: 8px 20px; border-radius: 5px; text-decoration: none; font-weight: bold; }
-        
-        /* HOME SECTION */
-        .hero { padding: 80px 5%; background: white; border-bottom: 5px solid #FFD700; }
-        .hero h1 { font-size: 4rem; color: #003973; margin: 0; }
-        .btn-start { background: #2E7D32; color: white; padding: 12px 30px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; margin-top: 20px; }
-
-        /* FOUNDER SECTION (FIXED SIZE) */
-        .founder-section { padding: 60px 5%; background: #f1f1f1; display: flex; align-items: center; gap: 30px; flex-wrap: wrap; }
-        .founder-img { width: 150px; height: 150px; border-radius: 50%; border: 4px solid #003973; background: white; }
-    </style>
-</head>
-<body>
-
 <nav>
     <a href="#" class="logo">ልማት Hub</a>
     <div class="nav-links">
         <a href="#home" style="text-decoration:none; color:#333; margin-right:15px;">Home</a>
+        <a href="#founder" style="text-decoration:none; color:#333; margin-right:15px;">Founder</a>
+        <a href="#faq" style="text-decoration:none; color:#333; margin-right:15px;">FAQ</a>
         <a href="#signup" class="btn-join">Join Now</a>
     </div>
 </nav>
-
-<section class="hero" id="home">
-    <h1>ልማት Hub</h1>
-    <p style="font-size: 1.5rem; color: #555;">Empowering Ethiopia's Students for a Global Future.</p>
-    <a href="#signup" class="btn-start">Start Learning Now</a>
-</section>
-
-<section class="founder-section">
-    <img src="https://img.icons8.com/ios-filled/150/003973/user-male-circle.png" class="founder-img" alt="Founder">
-    <div style="flex: 1;">
-        <h2 style="color: #003973;">A Message from the Founder</h2>
-        <p>Launched in 2026, ልማት Hub is committed to training the next 1 million Ethiopian developers.</p>
-    </div>
-</section>
-
-</body>
-</html>
