--- a/index.html
+++ b/index.html
@@ -1,9 +1,79 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ልማት Hub | Ethiopia 2026</title>
+    <style>
+        * { scroll-behavior: smooth; box-sizing: border-box; }
+        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; color: #333; }
+        
+        /* Navigation Bar */
+        nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .logo { font-weight: bold; font-size: 1.5rem; color: #003973; text-decoration: none; }
+        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
+        .btn-join { background: #2E7D32; color: white !important; padding: 8px 20px; border-radius: 5px; font-weight: bold; }
+
+        /* Home Section */
+        .hero { padding: 100px 5%; background: white; border-bottom: 5px solid #FFD700; }
+        .hero h1 { font-size: 4rem; color: #003973; margin: 0; }
+        .btn-start { background: #2E7D32; color: white; padding: 12px 30px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; margin-top: 25px; }
+
+        /* Founder Section */
+        .founder-section { padding: 80px 5%; background: #f1f1f1; display: flex; align-items: center; gap: 40px; flex-wrap: wrap; }
+        .founder-img { width: 150px; height: 150px; border-radius: 50%; border: 4px solid #003973; background: white; }
+
+        /* FAQ Section */
+        .faq-section { padding: 80px 5%; background: white; }
+        .faq-item { margin-bottom: 30px; border-bottom: 1px solid #eee; padding-bottom: 15px; }
+
+        /* Signup Section */
+        .signup-section { padding: 100px 5%; background: #003973; color: white; text-align: center; }
+        .form-container { max-width: 500px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
+        .signup-input { padding: 15px; width: 100%; border-radius: 5px; border: none; margin-bottom: 15px; }
+        .signup-btn { width: 100%; padding: 15px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; }
+    </style>
+</head>
+<body>
+
 <nav>
     <a href="#" class="logo">ልማት Hub</a>
     <div class="nav-links">
-        <a href="#home" style="text-decoration:none; color:#333; margin-right:15px;">Home</a>
-        <a href="#founder" style="text-decoration:none; color:#333; margin-right:15px;">Founder</a>
-        <a href="#faq" style="text-decoration:none; color:#333; margin-right:15px;">FAQ</a>
+        <a href="#home">Home</a>
+        <a href="#faq">FAQ</a>
         <a href="#signup" class="btn-join">Join Now</a>
     </div>
 </nav>
+
+<section class="hero" id="home">
+    <h1>ልማት Hub</h1>
+    <p style="font-size: 1.5rem; color: #555;">Empowering Ethiopia's Students for a Global Future.</p>
+    <a href="#signup" class="btn-start">Start Learning Now</a>
+</section>
+
+<section class="founder-section">
+    <img src="https://img.icons8.com/ios-filled/150/003973/user-male-circle.png" class="founder-img" alt="Founder">
+    <div>
+        <h2 style="color: #003973;">A Message from the Founder</h2>
+        <p>Building the bridge for 1 million Ethiopian developers.</p>
+    </div>
+</section>
+
+<section class="faq-section" id="faq">
+    <h2 style="color: #003973;">Frequently Asked Questions</h2>
+    <div class="faq-item">
+        <h3>Is it free to join?</h3>
+        <p>Our community path is free. Pro features for 2026 job placement have limited subsidized spots.</p>
+    </div>
+</section>
+
+<section class="signup-section" id="signup">
+    <div class="form-container">
+        <h2>Join Now</h2>
+        <input type="email" placeholder="Email Address" class="signup-input">
+        <button class="signup-btn">Submit</button>
+    </div>
+</section>
+
+</body>
+</html>
