--- a/index.html
+++ b/index.html
@@ -6,74 +6,68 @@
     <title>ልማት Hub | Ethiopia 2026</title>
     <style>
         * { scroll-behavior: smooth; box-sizing: border-box; }
-        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; color: #333; }
+        body { margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f8f9fa; color: #333; line-height: 1.6; }
         
-        /* Navigation Bar */
+        /* Navigation Bar Restoration */
         nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        .logo { font-weight: bold; font-size: 1.5rem; color: #003973; text-decoration: none; }
-        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
-        .btn-join { background: #2E7D32; color: white !important; padding: 8px 20px; border-radius: 5px; font-weight: bold; }
+        .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
+        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; transition: 0.3s; }
+        .btn-join { background: #2E7D32; color: white !important; padding: 10px 25px; border-radius: 5px; font-weight: bold; }
 
-        /* Home Section */
-        .hero { padding: 100px 5%; background: white; border-bottom: 5px solid #FFD700; }
-        .hero h1 { font-size: 4rem; color: #003973; margin: 0; }
-        .btn-start { background: #2E7D32; color: white; padding: 12px 30px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; margin-top: 25px; }
+        /* Hero/Home Section */
+        .hero { padding: 100px 5%; background: white; border-bottom: 8px solid #FFD700; }
+        .hero h1 { font-size: 4.5rem; color: #003973; margin: 0; }
+        .hero p { font-size: 1.5rem; color: #555; max-width: 800px; margin: 20px 0; }
+        .btn-start { background: #2E7D32; color: white; padding: 15px 35px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; font-size: 1.2rem; }
 
         /* Founder Section */
         .founder-section { padding: 80px 5%; background: #f1f1f1; display: flex; align-items: center; gap: 40px; flex-wrap: wrap; }
-        .founder-img { width: 150px; height: 150px; border-radius: 50%; border: 4px solid #003973; background: white; }
+        .founder-img { width: 180px; height: 180px; border-radius: 50%; border: 5px solid #003973; background: white; padding: 5px; }
+        .founder-text { flex: 1; min-width: 300px; }
 
-        /* FAQ Section */
-        .faq-section { padding: 80px 5%; background: white; }
-        .faq-item { margin-bottom: 30px; border-bottom: 1px solid #eee; padding-bottom: 15px; }
-
-        /* Signup Section */
-        .signup-section { padding: 100px 5%; background: #003973; color: white; text-align: center; }
+        /* FAQ & Signup Section */
+        .signup-section { padding: 80px 5%; background: #003973; color: white; text-align: center; }
         .form-container { max-width: 500px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
-        .signup-input { padding: 15px; width: 100%; border-radius: 5px; border: none; margin-bottom: 15px; }
-        .signup-btn { width: 100%; padding: 15px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; }
+        .signup-input { padding: 15px; width: 100%; border-radius: 5px; border: none; margin-bottom: 15px; font-size: 1rem; }
+        .signup-btn { width: 100%; padding: 15px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.1rem; }
     </style>
 </head>
 <body>
 
 <nav>
-    <a href="#" class="logo">ልማት Hub</a>
+    <a href="#home" class="logo">ልማት Hub</a>
     <div class="nav-links">
         <a href="#home">Home</a>
-        <a href="#faq">FAQ</a>
+        <a href="#founder">Founder</a>
         <a href="#signup" class="btn-join">Join Now</a>
     </div>
 </nav>
 
 <section class="hero" id="home">
     <h1>ልማት Hub</h1>
-    <p style="font-size: 1.5rem; color: #555;">Empowering Ethiopia's Students for a Global Future.</p>
+    <p>Empowering Ethiopia's Students for a Global Future. Mastering AI, Python, and remote work for 2026.</p>
     <a href="#signup" class="btn-start">Start Learning Now</a>
 </section>
 
-<section class="founder-section">
+<section class="founder-section" id="founder">
     <img src="https://img.icons8.com/ios-filled/150/003973/user-male-circle.png" class="founder-img" alt="Founder">
-    <div>
-        <h2 style="color: #003973;">A Message from the Founder</h2>
-        <p>Building the bridge for 1 million Ethiopian developers.</p>
-    </div>
-</section>
-
-<section class="faq-section" id="faq">
-    <h2 style="color: #003973;">Frequently Asked Questions</h2>
-    <div class="faq-item">
-        <h3>Is it free to join?</h3>
-        <p>Our community path is free. Pro features for 2026 job placement have limited subsidized spots.</p>
+    <div class="founder-text">
+        <h2 style="color: #003973; font-size: 2.2rem;">A Message from the Founder</h2>
+        <p style="font-size: 1.1rem; line-height: 1.8;">"Building the bridge for 1 million Ethiopian developers." Launched in 2026, ልማት Hub is your home for digital excellence.</p>
     </div>
 </section>
 
 <section class="signup-section" id="signup">
     <div class="form-container">
-        <h2>Join Now</h2>
-        <input type="email" placeholder="Email Address" class="signup-input">
-        <button class="signup-btn">Submit</button>
+        <h2>Join the Digital Revolution</h2>
+        <input type="email" placeholder="Enter your email" class="signup-input">
+        <button class="signup-btn">Get Started Today</button>
     </div>
 </section>
+
+<footer style="text-align: center; padding: 30px; background: #222; color: #fff;">
+    <p>&copy; 2026 ልማት Hub | Ethiopia Digital Mission.</p>
+</footer>
 
 </body>
 </html>
