--- a/index.html
+++ b/index.html
@@ -6,30 +6,36 @@
     <title>ልማት Hub | Ethiopia 2026</title>
     <style>
         * { scroll-behavior: smooth; box-sizing: border-box; }
-        body { margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #f8f9fa; color: #333; line-height: 1.6; }
+        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; color: #333; line-height: 1.6; }
         
-        /* Navigation Bar Restoration */
+        /* Navigation Bar */
         nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
-        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; transition: 0.3s; }
+        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
         .btn-join { background: #2E7D32; color: white !important; padding: 10px 25px; border-radius: 5px; font-weight: bold; }
 
         /* Hero/Home Section */
         .hero { padding: 100px 5%; background: white; border-bottom: 8px solid #FFD700; }
         .hero h1 { font-size: 4.5rem; color: #003973; margin: 0; }
         .hero p { font-size: 1.5rem; color: #555; max-width: 800px; margin: 20px 0; }
-        .btn-start { background: #2E7D32; color: white; padding: 15px 35px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; font-size: 1.2rem; }
+        .btn-start { background: #2E7D32; color: white; padding: 15px 35px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; }
 
         /* Founder Section */
         .founder-section { padding: 80px 5%; background: #f1f1f1; display: flex; align-items: center; gap: 40px; flex-wrap: wrap; }
         .founder-img { width: 180px; height: 180px; border-radius: 50%; border: 5px solid #003973; background: white; padding: 5px; }
         .founder-text { flex: 1; min-width: 300px; }
 
-        /* FAQ & Signup Section */
+        /* FAQ Section */
+        .faq-section { padding: 80px 5%; background: white; }
+        .faq-container { max-width: 900px; margin: 0 auto; }
+        .faq-item { margin-bottom: 25px; border-left: 5px solid #003973; padding-left: 20px; }
+        .faq-item h3 { color: #003973; margin-bottom: 10px; }
+
+        /* Signup Section */
         .signup-section { padding: 80px 5%; background: #003973; color: white; text-align: center; }
         .form-container { max-width: 500px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; }
         .signup-input { padding: 15px; width: 100%; border-radius: 5px; border: none; margin-bottom: 15px; font-size: 1rem; }
-        .signup-btn { width: 100%; padding: 15px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.1rem; }
+        .signup-btn { width: 100%; padding: 15px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; }
     </style>
 </head>
 <body>
@@ -39,6 +45,7 @@
     <div class="nav-links">
         <a href="#home">Home</a>
         <a href="#founder">Founder</a>
+        <a href="#faq">FAQ</a>
         <a href="#signup" class="btn-join">Join Now</a>
     </div>
 </nav>
@@ -52,8 +59,29 @@
 <section class="founder-section" id="founder">
     <img src="https://img.icons8.com/ios-filled/150/003973/user-male-circle.png" class="founder-img" alt="Founder">
     <div class="founder-text">
-        <h2 style="color: #003973; font-size: 2.2rem;">A Message from the Founder</h2>
-        <p style="font-size: 1.1rem; line-height: 1.8;">"Building the bridge for 1 million Ethiopian developers." Launched in 2026, ልማት Hub is your home for digital excellence.</p>
+        <h2 style="color: #003973;">A Message from the Founder</h2>
+        <p>"Building the bridge for 1 million Ethiopian developers." We ensure that local talent meets global opportunities.</p>
+    </div>
+</section>
+
+<section class="faq-section" id="faq">
+    <div class="faq-container">
+        <h2 style="color: #003973; font-size: 2.5rem; text-align: center;">Frequently Asked Questions</h2>
+        
+        <div class="faq-item">
+            <h3>Do I need a Fayda ID to register?</h3>
+            <p>Yes, for the 2026 certification track, a valid Fayda ID is required to verify your student status.</p>
+        </div>
+
+        <div class="faq-item">
+            <h3>Is the Python course beginner-friendly?</h3>
+            <p>Absolutely. We start from the basics and move toward AI integration by the end of the 12-week program.</p>
+        </div>
+
+        <div class="faq-item">
+            <h3>How do the remote work placements work?</h3>
+            <p>After completing the Pro track, students are matched with international partners for internship opportunities.</p>
+        </div>
     </div>
 </section>
 
@@ -66,7 +94,7 @@
 </section>
 
 <footer style="text-align: center; padding: 30px; background: #222; color: #fff;">
-    <p>&copy; 2026 ልማት Hub | Ethiopia Digital Mission.</p>
+    <p>&copy; 2026 ልማት Hub | Building Ethiopia's Future.</p>
 </footer>
 
 </body>
