--- a/index.html
+++ b/index.html
@@ -3,75 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Ethiopia 2026</title>
+    <title>ልማት Hub | Ethiopia 2026 Schedule</title>
     <style>
         * { scroll-behavior: smooth; box-sizing: border-box; }
         body { margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; background: #f8f9fa; color: #333; line-height: 1.6; }
         
-        /* Nav & Brand */
         nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
         .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
         .btn-join { background: #2E7D32; color: white !important; padding: 10px 25px; border-radius: 5px; font-weight: bold; }
 
-        .hero { padding: 100px 5%; background: white; border-bottom: 8px solid #FFD700; }
-        .hero h1 { font-size: 4.5rem; color: #003973; margin: 0; }
-        .btn-start { background: #2E7D32; color: white; padding: 15px 35px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; }
+        .hero { padding: 80px 5%; background: white; border-bottom: 8px solid #FFD700; text-align: center; }
+        .hero h1 { font-size: 4rem; color: #003973; margin: 0; }
 
-        /* Fayda One-Click Section */
-        .fayda-section { padding: 80px 5%; background: #003973; color: white; text-align: center; }
-        .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; background: rgba(255,255,255,0.05); }
+        /* Fayda Section */
+        .fayda-section { padding: 60px 5%; background: #003973; color: white; text-align: center; }
+        .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 30px; border-radius: 15px; background: rgba(255,255,255,0.05); }
         .fayda-input { padding: 15px; width: 100%; border-radius: 5px; border: none; margin-bottom: 20px; font-size: 1.2rem; text-align: center; }
-        .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
+        .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.1rem; }
 
-        /* Detailed Roadmap Table */
-        .roadmap-section { padding: 80px 5%; background: white; overflow-x: auto; }
-        table { width: 100%; border-collapse: collapse; min-width: 600px; }
-        th { background: #003973; color: white; padding: 15px; text-align: left; }
-        td { padding: 15px; border-bottom: 1px solid #eee; }
-        tr:hover { background: #f1f7ff; }
-
-        .founder-section { padding: 60px 5%; background: #f1f1f1; display: flex; align-items: center; gap: 30px; flex-wrap: wrap; }
-        .founder-img { width: 120px; height: 120px; border-radius: 50%; border: 3px solid #003973; }
-    </style>
-</head>
-<body>
-
-<nav>
-    <a href="#home" class="logo">ልማት Hub</a>
-    <div class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#roadmap">Roadmap</a>
-        <a href="#signup" class="btn-join">Verify & Join</a>
-    </div>
-</nav>
-
-<section class="hero" id="home">
-    <h1>ልማት Hub</h1>
-    <p style="font-size: 1.5rem; color: #555;">The 2026 Digital Gateway for Ethiopia. Powered by Fayda ID.</p>
-    <a href="#signup" class="btn-start">Claim Your Spot Now</a>
-</section>
-
-<section class="roadmap-section" id="roadmap">
-    <h2 style="color: #003973; text-align: center; font-size: 2.5rem; margin-bottom: 30px;">Your 2026 Roadmap</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Weeks</th>
-                <th>Module Topic</th>
-                <th>Learning Outcome</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1 - 4</td>
-                <td>Python Fundamentals</td>
-                <td>Logic, Data Structures, and Automation</td>
-            </tr>
-            <tr>
-                <td>5 - 8</td>
-                <td>AI & Data Science</td>
-                <td>Prompt Engineering & AI Model Usage</td>
-            </tr>
-            <tr>
-                <td>9 - 1
+        /* Schedule Table */
+        .schedule-section { padding: 80px 5%; background: white; overflow-x: auto; }
+        table {
