--- a/index.html
+++ b/index.html
@@ -3,25 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Ethiopia 2026 Schedule</title>
+    <title>ልማት Hub | Ethiopia 2026</title>
     <style>
         * { scroll-behavior: smooth; box-sizing: border-box; }
-        body { margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; background: #f8f9fa; color: #333; line-height: 1.6; }
+        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; color: #333; }
         
+        /* Nav */
         nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
-        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
-        .btn-join { background: #2E7D32; color: white !important; padding: 10px 25px; border-radius: 5px; font-weight: bold; }
+        .btn-join { background: #2E7D32; color: white !important; padding: 10px 25px; border-radius: 5px; text-decoration: none; font-weight: bold; }
 
-        .hero { padding: 80px 5%; background: white; border-bottom: 8px solid #FFD700; text-align: center; }
+        /* Hero */
+        .hero { padding: 80px 5%; background: white; text-align: center; border-bottom: 8px solid #FFD700; }
         .hero h1 { font-size: 4rem; color: #003973; margin: 0; }
 
-        /* Fayda Section */
+        /* Fayda Sync */
         .fayda-section { padding: 60px 5%; background: #003973; color: white; text-align: center; }
-        .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 30px; border-radius: 15px; background: rgba(255,255,255,0.05); }
-        .fayda-input { padding: 15px; width: 100%; border-radius: 5px; border: none; margin-bottom: 20px; font-size: 1.2rem; text-align: center; }
+        .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 30px; border-radius: 15px; }
+        .fayda-input { padding: 15px; width: 100%; border-radius: 5px; margin-bottom: 20px; font-size: 1.2rem; text-align: center; border: none; }
         .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.1rem; }
 
         /* Schedule Table */
         .schedule-section { padding: 80px 5%; background: white; overflow-x: auto; }
-        table {
+        table { width: 100%; border-collapse: collapse; min-width: 700px; margin-top: 20px; }
+        th { background: #003973; color: white; padding: 15px; text-align: left; }
+        td { padding: 15px; border-bottom: 1px solid #eee; }
+        .week-box { font-weight: bold; color: #003973; background: #eef4ff; padding: 5px 10px; border-radius: 4px; }
+    </style>
+</head>
+<body>
+
+<nav>
+    <a href="#" class="logo">ልማት Hub</a>
+    <a href="#signup" class="btn-join">Verify Fayda ID</a>
+</nav>
+
+<section class="hero">
+    <h1>ልማት Hub</h1>
+    <p style="font-size: 1.4rem;">Ethiopia's 2026 Digital Mission</p>
+</section>
+
+<section class="fayda-section" id="signup">
+    <div class="fayda-card">
+        <h2>Fayda One-Click Sync</h2>
+        <p>No forms. Your profile is pulled directly from the National ID system [cite: image_170
