--- a/index.html
+++ b/index.html
@@ -8,42 +8,26 @@
         * { scroll-behavior: smooth; box-sizing: border-box; }
         body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; color: #333; }
         
-        /* Nav */
+        /* Navigation */
         nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
-        .btn-join { background: #2E7D32; color: white !important; padding: 10px 25px; border-radius: 5px; text-decoration: none; font-weight: bold; }
+        .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
+        .btn-join { background: #2E7D32; color: white !important; padding: 10px 25px; border-radius: 5px; font-weight: bold; }
 
-        /* Hero */
-        .hero { padding: 80px 5%; background: white; text-align: center; border-bottom: 8px solid #FFD700; }
-        .hero h1 { font-size: 4rem; color: #003973; margin: 0; }
+        /* HERO / HOME PAGE */
+        .hero { padding: 120px 5%; background: white; text-align: center; border-bottom: 8px solid #FFD700; }
+        .hero h1 { font-size: 4.5rem; color: #003973; margin: 0; }
+        .hero p { font-size: 1.5rem; color: #555; margin: 20px 0; }
+        .btn-start { background: #2E7D32; color: white; padding: 15px 35px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; font-size: 1.2rem; }
 
-        /* Fayda Sync */
-        .fayda-section { padding: 60px 5%; background: #003973; color: white; text-align: center; }
-        .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 30px; border-radius: 15px; }
-        .fayda-input { padding: 15px; width: 100%; border-radius: 5px; margin-bottom: 20px; font-size: 1.2rem; text-align: center; border: none; }
-        .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.1rem; }
-
-        /* Schedule Table */
-        .schedule-section { padding: 80px 5%; background: white; overflow-x: auto; }
-        table { width: 100%; border-collapse: collapse; min-width: 700px; margin-top: 20px; }
-        th { background: #003973; color: white; padding: 15px; text-align: left; }
+        /* ROADMAP TABLE */
+        .roadmap-section { padding: 80px 5%; background: white; overflow-x: auto; }
+        table { width: 100%; border-collapse: collapse; min-width: 700px; margin-top: 30px; }
+        th { background: #003973; color: white; padding: 18px; text-align: left; }
         td { padding: 15px; border-bottom: 1px solid #eee; }
-        .week-box { font-weight: bold; color: #003973; background: #eef4ff; padding: 5px 10px; border-radius: 4px; }
-    </style>
-</head>
-<body>
+        .week-tag { font-weight: bold; color: #003973; background: #eef4ff; padding: 5px 10px; border-radius: 4px; }
 
-<nav>
-    <a href="#" class="logo">ልማት Hub</a>
-    <a href="#signup" class="btn-join">Verify Fayda ID</a>
-</nav>
-
-<section class="hero">
-    <h1>ልማት Hub</h1>
-    <p style="font-size: 1.4rem;">Ethiopia's 2026 Digital Mission</p>
-</section>
-
-<section class="fayda-section" id="signup">
-    <div class="fayda-card">
-        <h2>Fayda One-Click Sync</h2>
-        <p>No forms. Your profile is pulled directly from the National ID system [cite: image_170
+        /* FAYDA SYNC */
+        .fayda-section { padding: 80px 5%; background: #003973; color: white; text-align: center; }
+        .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; background: rgba(255,255,255,0.05); }
+        .fayda-input { padding: 15px; width: 100%; border-radius: 5px;
