--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ልማት Hub | Ethiopia 2026</title>
     <style>
+        /* General Reset */
         * { scroll-behavior: smooth; box-sizing: border-box; }
-        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; color: #333; }
+        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #ffffff; color: #333; }
         
         /* Navigation */
         nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -14,85 +15,21 @@
         .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
         .btn-join { background: #2E7D32; color: white !important; padding: 10px 25px; border-radius: 5px; font-weight: bold; }
 
-        /* HERO / HOME PAGE */
-        .hero { padding: 120px 5%; background: white; text-align: center; border-bottom: 8px solid #FFD700; }
-        .hero h1 { font-size: 4.5rem; color: #003973; margin: 0; }
-        .hero p { font-size: 1.5rem; color: #555; margin: 20px 0; }
+        /* HOME PAGE SECTION */
+        .hero { padding: 100px 5%; text-align: left; background: white; border-bottom: 8px solid #FFD700; }
+        .hero h1 { font-size: 4.5rem; color: #003973; margin: 0; font-weight: 800; }
+        .hero p { font-size: 1.5rem; color: #555; max-width: 700px; margin: 20px 0; }
         .btn-start { background: #2E7D32; color: white; padding: 15px 35px; border-radius: 5px; text-decoration: none; font-weight: bold; display: inline-block; font-size: 1.2rem; }
 
-        /* ROADMAP TABLE */
-        .roadmap-section { padding: 80px 5%; background: white; overflow-x: auto; }
-        table { width: 100%; border-collapse: collapse; min-width: 700px; margin-top: 30px; }
-        th { background: #003973; color: white; padding: 18px; text-align: left; }
+        /* SCHEDULE TABLE */
+        .roadmap-section { padding: 80px 5%; background: #f8f9fa; }
+        .roadmap-container { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); overflow-x: auto; }
+        table { width: 100%; border-collapse: collapse; min-width: 700px; }
+        th { background: #003973; color: white; padding: 15px; text-align: left; }
         td { padding: 15px; border-bottom: 1px solid #eee; }
-        .week-tag { font-weight: bold; color: #003973; background: #eef4ff; padding: 5px 10px; border-radius: 4px; }
+        .week-label { font-weight: bold; color: #003973; background: #eef4ff; padding: 4px 10px; border-radius: 4px; }
 
-        /* FAYDA SYNC */
+        /* FAYDA SYNC SECTION */
         .fayda-section { padding: 80px 5%; background: #003973; color: white; text-align: center; }
         .fayda-card { max-width: 600px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; background: rgba(255,255,255,0.05); }
-        .fayda-input { padding: 15px; width: 100%; border-radius: 5px; margin-bottom: 20px; font-size: 1.2rem; text-align: center; border: none; }
-        .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
-    </style>
-</head>
-<body>
-
-<nav>
-    <a href="#home" class="logo">ልማት Hub</a>
-    <div class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#roadmap">Schedule</a>
-        <a href="#signup" class="btn-join">Verify Fayda ID</a>
-    </div>
-</nav>
-
-<section class="hero" id="home">
-    <h1>ልማት Hub</h1>
-    <p>Ethiopia's 2026 Digital Mission. Empowering Students for the Future.</p>
-    <a href="#signup" class="btn-start">Claim Your Spot Now</a>
-</section>
-
-<section class="roadmap-section" id="roadmap">
-    <h2 style="color: #003973; text-align: center; font-size: 2.5rem;">The 12-Week Roadmap</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Weeks</th>
-                <th>Module Topic</th>
-                <th>Learning Outcome</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><span class="week-tag">1 - 4</span></td>
-                <td><b>Python Mastery</b></td>
-                <td>Core Logic & Automation Scripts</td>
-            </tr>
-            <tr>
-                <td><span class="week-tag">5 - 8</span></td>
-                <td><b>AI Integration</b></td>
-                <td>Prompt Engineering & LLM Tools</td>
-            </tr>
-            <tr>
-                <td><span class="week-tag">9 - 12</span></td>
-                <td><b>Career Prep</b></td>
-                <td>Remote Work & 2026 Job Matching</td>
-            </tr>
-        </tbody>
-    </table>
-</section>
-
-<section class="fayda-section" id="signup">
-    <div class="fayda-card">
-        <h2>Fayda One-Click Sync</h2>
-        <p>No forms needed. We sync your profile from the National ID system.</p>
-        <input type="text" placeholder="Enter Fayda ID Number" class="fayda-input">
-        <button class="fayda-btn" onclick="alert('Profile Synced Successfully!')">VERIFY & JOIN PROGRAM</button>
-    </div>
-</section>
-
-<footer style="text-align: center; padding: 30px; background: #222; color: #fff;">
-    <p>&copy; 2026 ልማት Hub | Official Fayda Partner</p>
-</footer>
-
-</body>
-</html>
+        .fayda-input { padding: 15px; width: 100%; border-radius
