--- a/index.html
+++ b/index.html
@@ -5,88 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ልማት Hub | Ethiopia 2026</title>
     <style>
-        /* Modern Reset */
         * { scroll-behavior: smooth; box-sizing: border-box; }
-        body { margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; background: #ffffff; color: #333; line-height: 1.6; }
+        body { margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; background: #ffffff; color: #333; line-height: 1.6; }
         
-        /* Navigation */
         nav { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
         .logo { font-weight: bold; font-size: 1.8rem; color: #003973; text-decoration: none; }
         .nav-links a { text-decoration: none; color: #333; margin-left: 20px; font-weight: 500; }
         .btn-join { background: #2E7D32; color: white !important; padding: 10px 25px; border-radius: 5px; font-weight: bold; text-decoration: none; }
 
-        /* Sections */
         .section-padding { padding: 80px 5%; }
-        
-        /* Hero Section */
         .hero { text-align: center; border-bottom: 8px solid #FFD700; background: #fff; }
         .hero h1 { font-size: 4rem; color: #003973; margin: 0; }
         .hero p { font-size: 1.4rem; color: #555; margin: 20px 0; }
 
-        /* Fayda Card */
         .fayda-section { background: #003973; color: white; text-align: center; }
         .fayda-card { max-width: 650px; margin: 0 auto; border: 2px solid #FFD700; padding: 40px; border-radius: 15px; background: rgba(255,255,255,0.05); }
         .fayda-input { padding: 15px; width: 100%; border-radius: 5px; margin-bottom: 20px; font-size: 1.2rem; text-align: center; border: none; }
         .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
 
-        /* Roadmap Table */
         .roadmap-container { background: white; padding: 30px; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.08); overflow-x: auto; }
         table { width: 100%; border-collapse: collapse; min-width: 700px; }
         th { background: #003973; color: white; padding: 15px; text-align: left; }
         td { padding: 15px; border-bottom: 1px solid #eee; }
         .week-tag { font-weight: bold; color: #003973; background: #eef4ff; padding: 4px 10px; border-radius: 4px; }
 
-        /* FAQ & Contact */
         .faq-item { background: #f9f9f9; padding: 20px; border-radius: 8px; margin-bottom: 15px; border-left: 5px solid #003973; }
         .contact-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-top: 30px; }
-        .contact-card { background: white; padding: 25px; border-radius: 10px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
-    </style>
-</head>
-<body>
-
-<nav>
-    <a href="#home" class="logo">ልማት Hub</a>
-    <div class="nav-links">
-        <a href="#home">Home</a>
-        <a href="#roadmap">Schedule</a>
-        <a href="#faq">FAQ</a>
-        <a href="#contact">Contact</a>
-        <a href="#signup" class="btn-join">Verify Fayda ID</a>
-    </div>
-</nav>
-
-<section class="hero section-padding" id="home">
-    <h1>ልማት Hub</h1>
-    <p>Ethiopia's 2026 Digital Mission. Direct Integration with National ID.</p>
-</section>
-
-<section class="fayda-section section-padding" id="signup">
-    <div class="fayda-card">
-        <h2>Fayda One-Click Sync</h2>
-        <p>Your profile is pulled directly from the National ID system. No manual forms.</p>
-        <input type="text" placeholder="Enter Fayda ID Number" class="fayda-input">
-        <button class="fayda-btn" onclick="alert('Profile Synced! Welcome to ልማት Hub.')">VERIFY & JOIN PROGRAM</button>
-    </div>
-</section>
-
-<section class="section-padding" id="roadmap" style="background: #fdfdfd;">
-    <h2 style="color: #003973; text-align: center; font-size: 2.5rem; margin-bottom: 30px;">Your 12-Week Roadmap</h2>
-    <div class="roadmap-container">
-        <table>
-            <thead>
-                <tr>
-                    <th>Weeks</th>
-                    <th>Module Topic</th>
-                    <th>Learning Outcome</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><span class="week-tag">1 - 4</span></td>
-                    <td><b>Python Foundations</b></td>
-                    <td>Logic, Automation, and Scripting.</td>
-                </tr>
-                <tr>
-                    <td><span class="week-tag">5 - 8</span></td>
-                    <td><b>AI Development</b></td>
-                    <td>Prompt Engineering & LLM Integration [cite: image_1702
+        .
