Add sections for schedule, FAQ, and contact information

--- a/index.html
+++ b/index.html
@@ -62,4 +62,57 @@
 <section class="fayda-section" id="signup">
     <div class="fayda-card">
         <h2>Fayda One-Click Sync</h2>
-        <p>No forms needed. We sync your profile from the National ID system
+        <p>No forms needed. We sync your profile from the National ID system.</p>
+        <input type="text" placeholder="Enter Fayda ID Number" class="fayda-input">
+        <button class="fayda-btn" onclick="alert('Profile Found!')">VERIFY & JOIN PROGRAM</button>
+    </div>
+</section>
+
+<section id="schedule">
+    <h2 style="text-align:center; color:#003973; font-size: 2.5rem; margin-bottom: 30px;">Your 12-Week Roadmap</h2>
+    <div class="table-container">
+        <table>
+            <thead>
+                <tr><th>Weeks</th><th>Module Topic</th><th>Learning Outcome</th></tr>
+            </thead>
+            <tbody>
+                <tr><td>1 - 4</td><td><b>Python Foundations</b></td><td>Logic, Automation, and Scripting.</td></tr>
+                <tr><td>5 - 8</td><td><b>AI Development</b></td><td>Prompt Engineering & LLM Integration.</td></tr>
+                <tr><td>9 - 12</td><td><b>Career Path</b></td><td>International Placement & 2026 Jobs.</td></tr>
+            </tbody>
+        </table>
+    </div>
+</section>
+
+<section id="faq">
+    <h2 style="text-align:center; color:#003973;">Frequently Asked Questions</h2>
+    <div style="max-width: 800px; margin: 0 auto;">
+        <div class="faq-item">
+            <h3>Is my Fayda ID data secure?</h3>
+            <p>Yes, we only access verified status through the official government gateway.</p>
+        </div>
+        <div class="faq-item">
+            <h3>Do I need prior experience?</h3>
+            <p>No, the program is designed to take you from beginner to expert in 12 weeks.</p>
+        </div>
+    </div>
+</section>
+
+<section id="contact">
+    <h2 style="text-align:center; color:#003973;">Contact Us</h2>
+    <div class="contact-grid">
+        <div class="contact-card"><h3>Email</h3><p>support@lemathub.et</p></div>
+        <div class="contact-card"><h3>Location</h3><p>Addis Ababa, Ethiopia</p></div>
+    </div>
+</section>
+
+<footer>
+    <h3>Connect With Us</h3>
+    <div class="socials">
+        <a href="#">TELEGRAM</a> | <a href="#">LINKEDIN</a> | <a href="#">FACEBOOK</a>
+    </div>
+    <p style="margin-top:20px;">&copy; 2026 ልማት Hub | Official Fayda Partner</p>
+</footer>
+
+</body>
+</html>
