--- a/index.html
+++ b/index.html
@@ -32,3 +32,67 @@
     <div class="nav-links">
         <a href="#home">Home</a>
         <a href="#courses">Courses</a>
+        <a href="#faq">FAQ</a>
+        <a href="#contact">Contact</a>
+        <a href="#signup" class="btn-join">Verify Fayda ID</a>
+    </div>
+</nav>
+
+<section id="home" class="hero">
+    <h1>ልማት Hub</h1>
+    <p>Ethiopia's 2026 Digital Mission. Powered by National ID.</p>
+</section>
+
+<section id="courses">
+    <h2 style="color: #003973; font-size: 2.5rem;">Specialized 2026 Tracks</h2>
+    <div class="course-grid">
+        <div class="course-card">
+            <span class="course-tag">SECURITY</span>
+            <h3>Cyber Defense</h3>
+            <p>Master national-grade encryption and threat detection.</p>
+        </div>
+        <div class="course-card">
+            <span class="course-tag">DATA</span>
+            <h3>Big Data Analytics</h3>
+            <p>Analyze massive datasets using cloud-native infrastructure.</p>
+        </div>
+        <div class="course-card">
+            <span class="course-tag">CLOUD</span>
+            <h3>Cloud Architecture</h3>
+            <p>Design scalable systems for the Ethiopian digital transformation.</p>
+        </div>
+        <div class="course-card">
+            <span class="course-tag">WEB3</span>
+            <h3>Blockchain Dev</h3>
+            <p>Develop smart contracts for the emerging digital Birr ecosystem.</p>
+        </div>
+    </div>
+</section>
+
+<section id="faq">
+    <h2 style="color: #003973; margin-bottom: 30px;">Frequently Asked Questions</h2>
+    <div class="faq-item">
+        <h3>Is the Fayda ID mandatory?</h3>
+        <p>Yes, all tracks require verification via the National ID system.</p>
+    </div>
+    <div class="faq-item">
+        <h3>Will I receive a certificate?</h3>
+        <p>Yes, a verified digital credential linked to your National ID profile.</p>
+    </div>
+    <div class="faq-item">
+        <h3>Is the program remote?</h3>
+        <p>Yes, all training is conducted via our elite digital learning platform.</p>
+    </div>
+</section>
+
+<section id="contact">
+    <h2 style="color: #003973;">Contact Us</h2>
+    <p>Email: contact@lemathub.et | Addis Ababa, Ethiopia</p>
+</section>
+
+<footer style="padding: 40px; text-align: center; background: #111; color: white;">
+    <p>&copy; 2026 ልማት Hub | Official Fayda Partner</p>
+</footer>
+
+</body>
+</html>
