--- a/index.html
+++ b/index.html
@@ -27,4 +27,56 @@
         .fayda-btn { width: 100%; padding: 18px; background: #FFD700; color: #003973; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 1.2rem; }
 
         /* Courses */
-        .course-grid { display: grid; grid-template-columns: repeat(
+        .course-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin-top: 40px; }
+        .course-card { background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); border-top: 5px solid #003973; text-align: left; color: #333; }
+        .course-tag { background: #eef2f7; color: #003973; padding: 5px 10px; font-size: 0.8rem; font-weight: bold; border-radius: 4px; display: inline-block; margin-bottom: 10px; }
+    </style>
+</head>
+<body>
+
+<nav>
+    <a href="#home" class="logo">ልማት Hub</a>
+    <div class="nav-links">
+        <a href="#home">Home</a>
+        <a href="#courses">Courses</a>
+        <span class="lang-switch">EN | አማርኛ</span>
+        <a href="#signup" class="btn-join">Verify Fayda ID</a>
+    </div>
+</nav>
+
+<section id="home" style="background: #f8f9fa;">
+    <h1>ልማት Hub</h1>
+    <p>Ethiopia's 2026 Digital Mission. Powered by National ID.</p>
+</section>
+
+<section id="signup" class="fayda-section">
+    <div class="fayda-card">
+        <h2>Fayda One-Click Sync</h2>
+        <p>Connect your National ID to access professional courses.</p>
+        <input type="text" placeholder="Enter Fayda ID" class="fayda-input">
+        <button class="fayda-btn">VERIFY & JOIN</button>
+    </div>
+</section>
+
+<section id="courses">
+    <h2 style="color: #003973;">Specialized 2026 Tracks</h2>
+    <div class="course-grid">
+        <div class="course-card">
+            <span class="course-tag">SECURITY</span>
+            <h3>Cyber Defense</h3>
+            <p>Master national-grade encryption and threat detection.</p>
+        </div>
+        <div class="course-card">
+            <span class="course-tag">CLOUD</span>
+            <h3>Cloud Architecture</h3>
+            <p>Design scalable systems for Ethiopian transformation.</p>
+        </div>
+    </div>
+</section>
+
+<footer style="padding: 40px; text-align: center; background: #111; color: white;">
+    <p>&copy; 2026 ልማት Hub | Official Fayda Partner</p>
+</footer>
+
+</body>
+</html>
